@@ -14,6 +14,7 @@ class TestCase::Lib::Fn3 {
   use TestCase::Minimal;
   use EqualityChecker;
   use EqualityChecker::SameObject;
+  use Complex_2d;
 
   static method test_abs : int () {
     
@@ -1754,6 +1755,141 @@ class TestCase::Lib::Fn3 {
       }
     }
 
+    return 1;
+  }
+
+  static method is_array : int () {
+    
+    # Array
+    {
+      my $array = new byte[3];
+      
+      unless (Fn->is_array($array)) {
+        return 0;
+      }
+    }
+    
+    # string
+    {
+      my $string = "abc";
+      
+      if (Fn->is_array($string)) {
+        return 0;
+      }
+    }
+    
+    # Object
+    {
+      my $minimal = TestCase::Minimal->new;
+      
+      if (Fn->is_array($minimal)) {
+        return 0;
+      }
+    }
+    
+    # undef
+    {
+      if (Fn->is_array(undef)) {
+        return 0;
+      }
+    }
+
+    return 1;
+  }
+
+  static method is_numeric_array : int () {
+
+    # Numeric Array
+    {
+      unless (Fn->is_numeric_array(new byte[3])) {
+        return 0;
+      }
+
+      unless (Fn->is_numeric_array(new double[3])) {
+        return 0;
+      }
+    }
+
+    # Multi Numeric Array
+    {
+      if (Fn->is_numeric_array(new Complex_2d[3])) {
+        return 0;
+      }
+    }
+    
+    # string
+    {
+      my $string = "abc";
+      
+      if (Fn->is_numeric_array($string)) {
+        return 0;
+      }
+    }
+    
+    # Object
+    {
+      my $minimal = TestCase::Minimal->new;
+      
+      if (Fn->is_numeric_array($minimal)) {
+        return 0;
+      }
+    }
+
+    # undef
+    {
+      if (Fn->is_numeric_array(undef)) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+
+  static method is_mulnum_array : int () {
+
+    # Numeric Array
+    {
+      if (Fn->is_mulnum_array(new byte[3])) {
+        return 0;
+      }
+
+      if (Fn->is_mulnum_array(new double[3])) {
+        return 0;
+      }
+    }
+
+    # Multi Numeric Array
+    {
+      unless (Fn->is_mulnum_array(new Complex_2d[3])) {
+        return 0;
+      }
+    }
+    
+    # string
+    {
+      my $string = "abc";
+      
+      if (Fn->is_mulnum_array($string)) {
+        return 0;
+      }
+    }
+    
+    # Object
+    {
+      my $minimal = TestCase::Minimal->new;
+      
+      if (Fn->is_mulnum_array($minimal)) {
+        return 0;
+      }
+    }
+
+    # undef
+    {
+      if (Fn->is_mulnum_array(undef)) {
+        return 0;
+      }
+    }
+    
     return 1;
   }
 }
