@@ -17,6 +17,7 @@ Revision history for SPVM
         * Add the "new_array_proto" native API.
         * Fn->new_array_proto throw an exception when the length is lower than 0.
         * Add the "copy" native API.
+        * Add Fn->is_array, Fn->is_numeric_array, Fn->is_mulnum_array
         [BUG FIX]
         * Fix the bug that Fn->new_array_proto doesn't create multi numeric array and number array correctly.
         
